[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/pictures/interior/16x16rpg indoor tileset expansion 1 trans.png" type="Texture" id=1]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://intro/tres/path_arrow.tres" type="Texture" id=3]
[ext_resource path="res://World/script/wine_mission.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0868

[sub_resource type="TileSet" id=2]
0/name = "path_arrow.tres 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 7, 6 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="wine_mission" type="Node2D"]
script = ExtResource( 4 )

[node name="wine_bottle" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 52, 153, 9, 21 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -27, -38 )
scale = Vector2( 0.165625, 0.0888889 )
normal = ExtResource( 2 )

[node name="arrow_head" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( -1703940, 0, 0 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
